fix: CTA button style on mobile device.

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,4 +69,11 @@
   .Hero-image {
     display: none;
   }
+
+  .button--cta {
+    padding: .75rem 1.5rem .75rem 1.5rem;
+    background-color: #F7931A;
+    color: white;
+    font-size: 18px;
+  }
 }
